--- a/pages/staff.html
+++ b/pages/staff.html
@@ -282,27 +282,18 @@
                 </div>
             </div>
 
-            <!-- C. Order Processing Page -->
+            <!-- C. Order Management Page -->
             <div id="orders-page" class="page-content hidden">
                 <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-6 gap-4">
                     <div>
                         <h1 class="text-2xl font-bold">Order Management</h1>
                         <p class="text-gray-500">Manage and track all customer orders</p>
                     </div>
-                    <div class="flex gap-2">
-                        <div class="relative">
-                            <input type="text" id="order-search" placeholder="Search orders..." class="form-input pl-10 w-full md:w-64">
-                            <i class="fa fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
-                        </div>
-                        <button id="refresh-orders" class="btn-primary bg-brown-dark hover:bg-brown-dark/90 border-none">
-                            <i class="fa fa-refresh mr-2"></i>Refresh
-                        </button>
-                    </div>
                 </div>
 
                 <div class="card mb-6">
                     <h3 class="text-lg font-semibold mb-4">Filter Criteria</h3>
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-4">
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">Date Range</label>
                             <div class="flex items-center gap-2">
@@ -317,14 +308,21 @@
                                 <option value="">All Statuses</option>
                             </select>
                         </div>
-                        <div class="flex items-end gap-2">
-                            <button id="apply-order-filters" class="btn-primary flex-1 bg-brown-dark hover:bg-brown-dark/90 border-none">
-                                <i class="fa fa-search mr-2"></i>Search
-                            </button>
-                            <button id="reset-order-filters" class="btn-secondary flex-1">
-                                <i class="fa fa-refresh mr-2"></i>Reset
-                            </button>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Search Order</label>
+                            <div class="relative">
+                                <input type="text" id="order-search" placeholder="Order ID, Customer Name..." class="form-input pl-10">
+                                <i class="fa fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
+                            </div>
                         </div>
+                    </div>
+                    <div class="flex justify-end gap-2">
+                        <button id="apply-order-filters" class="btn-primary bg-brown-dark hover:bg-brown-dark/90 border-none px-8">
+                            <i class="fa fa-search mr-2"></i>Search
+                        </button>
+                        <button id="reset-order-filters" class="btn-secondary px-8">
+                            <i class="fa fa-refresh mr-2"></i>Reset
+                        </button>
                     </div>
                 </div>
 
@@ -358,7 +356,6 @@
                             </thead>
                             <tbody id="orders-list" class="bg-white divide-y divide-gray-200"></tbody>
                         </table>
-                        <!-- 在 </tbody> </table> 标签闭合后添加 -->
                         <div id="orders-pagination-controls"></div>
                     </div>
                 </div>
@@ -385,6 +382,9 @@
                                             Request ID</th>
                                         <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                            Actions</th>
+                                        <th
+                                            class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                             Date Requested</th>
                                         <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -393,11 +393,8 @@
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                             Status</th>
                                         <th
-                                            class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            Expected Delivery</th>
-                                        <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider rounded-tr-lg">
-                                            Actions</th>
+                                            Expected Delivery</th>
                                     </tr>
                                 </thead>
                                 <tbody id="pending-requests-list" class="bg-white divide-y divide-gray-200"></tbody>
@@ -416,6 +413,9 @@
                                             Request ID</th>
                                         <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                            Actions</th>
+                                        <th
+                                            class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                             Date Requested</th>
                                         <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -424,11 +424,8 @@
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                             Status</th>
                                         <th
-                                            class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            Delivery Date</th>
-                                        <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider rounded-tr-lg">
-                                            Actions</th>
+                                            Delivery Date</th>
                                     </tr>
                                 </thead>
                                 <tbody id="previous-requests-list" class="bg-white divide-y divide-gray-200"></tbody>
@@ -626,12 +623,14 @@
                             <tbody id="request-items-body" class="divide-y divide-gray-200">
                                 <!-- 动态行模板 -->
                                 <tr>
-                                    <td class="p-1"><input type="text" class="form-input text-xs item-title"
-                                            placeholder="Title" required></td>
+                                    <td class="p-1">
+                                        <input type="text" class="form-input text-xs item-title"
+                                            placeholder="Search book..." list="book-suggestions" required>
+                                    </td>
                                     <td class="p-1"><input type="text" class="form-input text-xs item-isbn"
-                                            placeholder="ISBN"></td>
+                                            placeholder="ISBN" readonly></td>
                                     <td class="p-1"><input type="text" class="form-input text-xs item-sku"
-                                            placeholder="SKU"></td>
+                                            placeholder="SKU" readonly></td>
                                     <td class="p-1"><input type="number" class="form-input text-xs text-center item-qty"
                                             min="1" value="10" required></td>
                                     <td class="p-1 text-center">
@@ -641,6 +640,7 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <datalist id="book-suggestions"></datalist>
                         <button type="button" onclick="addRequestRow()"
                             class="mt-3 text-sm text-primary font-medium hover:underline">
                             <i class="fa fa-plus-circle mr-1"></i> Add Another Item
