--- a/pages/manager.html
+++ b/pages/manager.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
 
-    <!-- 前端路由守卫 -->
+    <!-- Protect html router -->
     <script>
         (function () {
             const token = localStorage.getItem('auth_token');
@@ -170,7 +170,6 @@
 
         <!-- 具体的页面内容 -->
         <main class="flex-1 overflow-y-auto p-4 lg:p-6" id="main-content">
-            <!-- 移除了重复的用户区域代码 -->
 
             <!-- Overview Page -->
             <div id="overview-page" class="page-content">
@@ -943,7 +942,7 @@
 
             <!-- User Management Page -->
             <div id="user-management-page" class="page-content hidden">
-                <!-- 标题和搜索框区域 - 修复嵌套 -->
+                <!-- 标题和搜索框区域 -->
                 <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
                     <!-- 标题区域 -->
                     <div class="flex items-center gap-3 mb-4 md:mb-0">
@@ -964,7 +963,7 @@
                             </span>
                         </div>
                     </div>
-                </div> <!-- 标题和搜索框区域结束 -->
+                </div> 
 
                 <!-- User Management Table -->
                 <div class="card">
@@ -1039,7 +1038,7 @@
                     </div>
                 </div>
 
-                <!-- Edit User Modal (保持原位置，但应该移到更外层) -->
+                <!-- Edit User Modal -->
                 <div id="edit-user-modal"
                     class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50 p-4">
                     <div class="bg-white rounded-lg w-full max-w-md max-h-[90vh] overflow-y-auto">
@@ -1049,7 +1048,7 @@
                                 <input type="hidden" id="edit-user-id">
 
                                 <div class="space-y-4">
-                                    <!-- User ID (readonly) -->
+                                    <!-- User ID -->
                                     <div>
                                         <label class="block text-sm font-medium text-gray-700 mb-1">
                                             User ID <span class="text-gray-500">(cannot be changed)</span>
@@ -1065,7 +1064,7 @@
                                         <input type="text" class="form-input" id="edit-username" required>
                                     </div>
 
-                                    <!-- User Type (readonly) -->
+                                    <!-- User Type -->
                                     <div>
                                         <label class="block text-sm font-medium text-gray-700 mb-1">
                                             User Type <span class="text-gray-400 text-xs">(Cannot be modified)</span>
@@ -1430,7 +1429,7 @@
     </div>
 
     <!-- ==================================================================== -->
-    <!-- 当前用户账户管理模态框 (Edit Profile & Change Password) -->
+    <!-- Edit Profile & Change Password -->
     <!-- ==================================================================== -->
 
     <!-- Edit Profile Modal -->
